--- a/project-grocery-store/css/styles.css
+++ b/project-grocery-store/css/styles.css
@@ -5,6 +5,13 @@ body {
 }
 
 /*************************
+Navigation Menu
+*************************/
+.navbar {
+  background-color: rgba(0, 0, 0, 0.8);
+}
+
+/*************************
 Landing Page
 *************************/
 #wrapper {
