--- a/portfolio-site/static/css/style.css
+++ b/portfolio-site/static/css/style.css
@@ -555,6 +555,7 @@ input#address {
   border-width: 1px 1px 3px;
   box-shadow: 0 -1px 0 rgba(255,255,255,0.1) inset;
   margin-bottom: 10px;
+  margin-left: 25%;
 }
 
 /* Submit button spinner */
@@ -580,6 +581,7 @@ input#address {
 #submit-btn.loading .spinner {
   display: inline-block;
 }
+
 
 @keyframes spin {
   to { transform: rotate(360deg); }
